# MyCodeRepo

CDemo/: Readme.md
CDemo/01HelloWorld/: .gitignore  build.sh  main.c
CDemo/02Type/: build.sh  main.c
CDemo/03Function/: main.c  main.cpp
CDemo/04Standard/: Readme.md  build.sh  main  main.cpp
CDemo/PointerDemo/: .gitignore  CMakeLists.txt  main.cpp
CMakeDemo/: Readme.md
CMakeDemo/01HelloWorld/: CMakeLists.txt  main.cpp
CMakeDemo/02Header/: CMakeLists.txt
CMakeDemo/02Header/include/: Printer.h
CMakeDemo/02Header/src/: Printer.cpp  main.cpp
CMakeDemo/03Lib/: CMakeLists.txt
CMakeDemo/03Lib/lib/Hello/: Hello.cpp
CMakeDemo/04SubLib/: CMakeLists.txt
CMakeDemo/04SubLib/lib/Hello/: CMakeLists.txt
JniDemo/BasicDemo01/: BasicDemo01.c  BasicDemo01.h  BasicDemo01.java  build.sh  makefile
JniDemo/BasicDemo02/: BasicDemo02.c  BasicDemo02.h  BasicDemo02.java  makefile
JniDemo/LearnDemo/: HelloJNI.java  build.sh
JsonDemo/: CMakeLists.txt  leptjson.c  leptjson.h  test.c
MakefileDemo/Test/: Makefile
